@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkObj.c,v 1.19 2007/12/13 15:24:16 dgp Exp $
+ * RCS: @(#) $Id: tkObj.c,v 1.19.2.1 2008/12/21 23:52:45 ferrieux Exp $
  */
 
 #include "tkInt.h"
@@ -125,6 +125,91 @@ static Tcl_ObjType windowObjType = {
 /*
  *----------------------------------------------------------------------
  *
+ * GetPixelsFromObjEx --
+ *
+ *	Attempt to return a pixel value from the Tcl object "objPtr". If the
+ *	object is not already a pixel value, an attempt will be made to
+ *	convert it to one.
+ *
+ * Results:
+ *	The return value is a standard Tcl object result. If an error occurs
+ *	during conversion, an error message is left in the interpreter's
+ *	result unless "interp" is NULL.
+ *
+ * Side effects:
+ *	If the object is not already a pixel, the conversion will free any old
+ *	internal representation.
+ *
+ *----------------------------------------------------------------------
+ */
+
+static
+int
+GetPixelsFromObjEx(
+    Tcl_Interp *interp, 	/* Used for error reporting if not NULL. */
+    Tk_Window tkwin,
+    Tcl_Obj *objPtr,		/* The object from which to get pixels. */
+    int *intPtr,
+    double *dblPtr)		/* Places to store resulting pixels. */
+{
+    int result,fresh;
+    double d;
+    PixelRep *pixelPtr;
+    static double bias[] = {
+	1.0,	10.0,	25.4,	0.35278 /*25.4 / 72.0*/
+    };
+
+ retry:
+    if (objPtr->typePtr != &pixelObjType) {
+	result = SetPixelFromAny(interp, objPtr);
+	if (result != TCL_OK) {
+	    return result;
+	}
+	fresh=1;
+    } else {
+	fresh=0;
+    }
+
+    if (SIMPLE_PIXELREP(objPtr)) {
+	*intPtr = GET_SIMPLEPIXEL(objPtr);
+	if (dblPtr) {
+	    *dblPtr=(double)(*intPtr);
+	}
+    } else {
+	pixelPtr = GET_COMPLEXPIXEL(objPtr);
+	if ((!fresh) && (pixelPtr->tkwin != tkwin))
+	    {
+		/* in case of exo-screen conversions of non-pixels
+		 * we force a recomputation from the string
+		 */
+
+		FreePixelInternalRep(objPtr);
+		goto retry;
+	    }
+	if ((pixelPtr->tkwin != tkwin)||dblPtr) {
+	    d = pixelPtr->value;
+	    if (pixelPtr->units >= 0) {
+		d *= bias[pixelPtr->units] * WidthOfScreen(Tk_Screen(tkwin));
+		d /= WidthMMOfScreen(Tk_Screen(tkwin));
+	    }
+	    if (d < 0) {
+		pixelPtr->returnValue = (int) (d - 0.5);
+	    } else {
+		pixelPtr->returnValue = (int) (d + 0.5);
+	    }
+	    pixelPtr->tkwin = tkwin;
+	    if (dblPtr) {
+		*dblPtr=(double)d;
+	    }
+	}
+	*intPtr = pixelPtr->returnValue;
+    }
+    return TCL_OK;
+}
+
+/*
+ *----------------------------------------------------------------------
+ *
  * Tk_GetPixelsFromObj --
  *
  *	Attempt to return a pixel value from the Tcl object "objPtr". If the
@@ -150,39 +235,54 @@ Tk_GetPixelsFromObj(
     Tcl_Obj *objPtr,		/* The object from which to get pixels. */
     int *intPtr)		/* Place to store resulting pixels. */
 {
-    int result;
+    return GetPixelsFromObjEx(interp,tkwin,objPtr,intPtr,NULL);
+}
+
+/*
+ *----------------------------------------------------------------------
+ *
+ * Tk_GetDoublePixelsFromObj --
+ *
+ *	Attempt  to  return   a  double  pixel  value  from   the  Tcl  object
+ *	"objPtr". If the object is not  already a pixel value, an attempt will
+ *	be made to convert it to one, the internal unit being pixels.
+ *
+ * Results:
+ *	The return value is a standard Tcl object result. If an error occurs
+ *	during conversion, an error message is left in the interpreter's
+ *	result unless "interp" is NULL.
+ *
+ * Side effects:
+ *	If the object is not already a pixel, the conversion will free any old
+ *	internal representation.
+ *
+ *----------------------------------------------------------------------
+ */
+
+int
+Tk_GetDoublePixelsFromObj(
+    Tcl_Interp *interp, 	/* Used for error reporting if not NULL. */
+    Tk_Window tkwin,
+    Tcl_Obj *objPtr,		/* The object from which to get pixels. */
+    double *doublePtr)		/* Place to store resulting pixels. */
+{
     double d;
-    PixelRep *pixelPtr;
-    static double bias[] = {
-	1.0,	10.0,	25.4,	0.35278 /*25.4 / 72.0*/
-    };
+    int result,val;
 
-    if (objPtr->typePtr != &pixelObjType) {
-	result = SetPixelFromAny(interp, objPtr);
-	if (result != TCL_OK) {
-	    return result;
-	}
+    result=GetPixelsFromObjEx(interp, tkwin, objPtr, &val, &d);
+    if (result != TCL_OK) {
+	return result;
     }
-
-    if (SIMPLE_PIXELREP(objPtr)) {
-	*intPtr = GET_SIMPLEPIXEL(objPtr);
-    } else {
+    if (!SIMPLE_PIXELREP(objPtr)) {
+	PixelRep *pixelPtr;
 	pixelPtr = GET_COMPLEXPIXEL(objPtr);
-	if (pixelPtr->tkwin != tkwin) {
-	    d = pixelPtr->value;
-	    if (pixelPtr->units >= 0) {
-		d *= bias[pixelPtr->units] * WidthOfScreen(Tk_Screen(tkwin));
-		d /= WidthMMOfScreen(Tk_Screen(tkwin));
-	    }
-	    if (d < 0) {
-		pixelPtr->returnValue = (int) (d - 0.5);
-	    } else {
-		pixelPtr->returnValue = (int) (d + 0.5);
-	    }
-	    pixelPtr->tkwin = tkwin;
+	if (pixelPtr->units >= 0) {
+	    /* internally "shimmer" to pixel units */
+	    pixelPtr->units=-1;
+	    pixelPtr->value=d;
 	}
-	*intPtr = pixelPtr->returnValue;
     }
+    *doublePtr = d;
     return TCL_OK;
 }
 
