@@ -1,3 +1,10 @@
+2008-12-22  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>
+
+	* generic/tkCanvUtil.c: Backport of the Millipeter patch [1813597,
+	* generic/tkInt.h       2218964]
+	* generic/tkObj.c 
+	* generic/tkText.c 
+	
 2008-12-21  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.6 TAGGED FOR RELEASE ***
